--- a/service.html
+++ b/service.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage-GIT</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>homepage_for_git</h1>
-    <p>aaaaa</p>
-    <hr>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, consequatur.</h1>
 </body>
 </html>
