--- a/service.html
+++ b/service.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, consequatur.</h1>
+    <P>Virus Installed</P>
 </body>
 </html>
